syntax = "proto2";

import "device.proto";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "ConfigProto";

message Config {
    required sint32 threshold = 1;
    map<string, Device> device = 2;
    map<string, string> data = 3;
}

message ConfigUpdate {
    required bytes id = 1;
}

message ConfigUpdateReply {
    required Config config = 1;
}
